# sysTrace

./: README.en.md  README.md  test.sh
docs/: 0.quickstart.md
failslow/: requirements.txt  setup.py
failslow/config/: metric_config.json  model_config.json
failslow/failslow/: fail_slow_detection.py  main.py  slow_node_detection.py
failslow/failslow/alg/: __init__.py
failslow/failslow/dataloader/: __init__.py  marker_data_reader.py  restore_comm.py  step_time_reader.py  systrace_pb2.py
failslow/failslow/process/: __init__.py  convert_json2csv.py  convert_mspti_timeline.py  post_process.py  suppression.py
failslow/failslow/response/: __init__.py  response.py
failslow/failslow/tests/: __init__.py  comm_slow.py  fft.py  kmeans_cluster.py  tmp.py
failslow/failslow/util/: constant.py
failslow/mcp_server/: README.md  fail_slow_detection_api.py  mcp_data.py  mcp_server.py  openapi_server.py  report_api.py  setup.py
failslow/mcp_server/config/: openapi.yml
failslow/mcp_server/service/: systrace-mcpserver.service
systrace/: CMakeLists.txt  build.sh
systrace/client/: sysTracecli.cpp
systrace/config/: PyFuncList
systrace/convert/: conver_osprobe_to_timeline.py  convert_io_to_timeline.py  convert_json2csv.py  convert_mem_to_flamegraph.py  convert_mspti_timeline.py  convert_osprobe_to_timeline.py  convert_pytorch_to_timeline.py  merge_json_by_rank.py
systrace/include/common/: logging.h  macro.h  shared_constants.c  shared_constants.h  util.cc  util.h
systrace/protos/: systrace.proto  systrace.v2.proto  systrace.v3.proto
systrace/server/: monitor_server.cpp  monitor_server.hpp
systrace/src/ascend/: hook.cc  (+1 more)
systrace/src/os/: CMakeLists.txt  __bpf_kern.h  __compat.h  __feat_probe.h  __libbpf.h  bpf.h  bpf_comm.h  common.h  os_cpu.bpf.c  os_mem.bpf.c  os_probe.c  os_probe.h
systrace_mcp/: README.md  setup.py
systrace_mcp/config/: ftp_config.json
systrace_mcp/service/: systrace-mcpserver.service
systrace_mcp/systrace_mcp/: __init__.py  fail_slow_detection_api.py  mcp_data.py  mcp_server.py  openapi_server.py  remote_file_fetcher.py  report_api.py
(+17 files in other folders)
